Add some JVM opts suitable for OpenJ9.
..generalize this somehow later so it'll work with several JVMs.